# new-portal

./: .dockerignore  .env.example  AGENTS.md  docker-compose.yml  index.html  package-lock.json  package.json  todo.txt  vite.config.js
admin/: index.html  package-lock.json  (+2 more)
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0997102c8102_add_authorization_documents_and_.py  7e66691ece09_merge_heads.py  a1b2c3d4e5f6_add_site_settings_table.py  b1c2d3e4f5a6_add_news_editorial_fields.py  b2c3d4e5f6a7_add_carousel_slides_table.py  b73c0008566a_add_authorization_documents_and_.py  c1d2e3f4a5b6_add_author_to_news.py  c3d4e5f6a7b8_add_sale_items_table.py  d4e5f6a7b8c9_add_categories_and_permissions.py  e1f2g3h4i5j6_add_info_access_tables.py  f2g3h4i5j6k7_add_credit_line_detail_fields.py  g5h6i7j8k9l0_add_2fa_columns.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  carousel_slide.py  category.py  credit_line.py  info_category.py  info_document.py  news.py  permission.py  sale_item.py  site_setting.py  user.py
backend/app/routes/: auth.py  carousel_slides.py  categories.py  credit_lines.py  info_categories.py  info_documents.py  news.py  sale_items.py  site_settings.py  upload.py  users.py
backend/app/schemas/: auth.py  carousel_slide.py  category.py  credit_line.py  info_category.py  info_document.py  news.py  permission.py  sale_item.py  site_setting.py  user.py
backend/app/utils/: auth.py  deps.py
(+58 files in other folders)
